--- a/GoogleClone/css/Main.css
+++ b/GoogleClone/css/Main.css
@@ -64,36 +64,54 @@ a:hover{
 }
 
 main{
-    width: 100%;
-    height: 800px;
+    margin-top: 150px;
+    text-align: center;
 }
 
 main .Main-logo{
-  width: 530px;
-  margin: 0 auto;
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
 }
 
 main .Main-logo img{
-    margin: 0 auto;
+    width: 386px;
+    height: 130px;
 }
-  
 
 main .main-searchBar{
- width: inherit;
- height: 225px;
- display: flex;
- justify-content: center;
+    width: 100%;
+    height: 160px;
 }
 
 main .main-searchBar .main-input-container{
-    border-style: solid;
-    border-radius: 10%;
-    height: 44px;
-    width: 582px;
+    width: 580px;
+    height: 45px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
 }
 
-main .main-buttoms{
-    width: inherit;
-    height: 225px;
+main .main-searchBar .main-input-container .search-icon img{
+    width: 31px;
+    height: 31px;
+ }
+
+main .main-searchBar .main-input-container input{
+    width: 485px;
+    height: 31px;
+    border-radius: 10px;
+    border-color: rgb(185, 181, 181);
+ 
+}
+
+main .main-searchBar .main-input-container input:focus{
+    box-shadow:  1px 1px 5px  black;
+    outline: none;
+}
+
+main .main-searchBar .main-input-container .micro-icon img{
+    width: 31px;
+    height: 31px;
 }
 
