--- a/GoogleClone/css/Main.css
+++ b/GoogleClone/css/Main.css
@@ -62,11 +62,15 @@ a:hover{
     width: 32px;
     height: 32px;
 }
+  
 
+   
 main{
     margin-top: 150px;
     text-align: center;
 }
+
+     /* Estilos del logo */
 
 main .Main-logo{
     width: 530px;
@@ -79,17 +83,27 @@ main .Main-logo img{
     height: 130px;
 }
 
+    /* Estilos de la barra de busqueda */
+
 main .main-searchBar{
     width: 100%;
-    height: 160px;
+    height: 100px;
 }
 
 main .main-searchBar .main-input-container{
-    width: 580px;
+    width: 700px;
     height: 45px;
     margin: 0 auto;
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    border-style: solid;
+    border-radius: 25px 25px 25px 25px ;
+    border-color: rgb(185, 181, 181);
+}
+
+main .main-searchBar .main-input-container:hover{
+    box-shadow:  0 1px 1px 2px #dadce0;;
 }
 
 main .main-searchBar .main-input-container .search-icon img{
@@ -98,15 +112,12 @@ main .main-searchBar .main-input-container .search-icon img{
  }
 
 main .main-searchBar .main-input-container input{
-    width: 485px;
+    width: 600px;
     height: 31px;
-    border-radius: 10px;
-    border-color: rgb(185, 181, 181);
- 
+    border-style: none;
 }
 
 main .main-searchBar .main-input-container input:focus{
-    box-shadow:  1px 1px 5px  black;
     outline: none;
 }
 
@@ -115,3 +126,61 @@ main .main-searchBar .main-input-container .micro-icon img{
     height: 31px;
 }
 
+    /* Estilos de los botones de busqueda */
+
+main .main-buttons{
+    width: 100%;
+    height: 78px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .main-buttons div .searchButtons{
+    background-color: #f8f9fa;
+    height: 56px;
+    width: 187px;
+    margin-left: 1rem;
+    border: 1px solid #f8f9fa;
+    border-radius: 10px;
+}
+
+main .main-buttons div .searchButtons:hover{
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+}
+
+
+/* Estilos de el footer */
+
+footer{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    background-color: #f2f2f2;
+    margin-top: 350px;
+    
+   
+}
+
+footer .footerLink a{
+    color: #70757a;
+    text-decoration: none;
+    height: 46px;
+    margin-top: 1rem;
+   
+}
+}
+
+footer .leftSide{
+    display: flex;
+    justify-content: space-between;
+    
+} 
+
+footer  .rightSide{
+    display: flex;
+}
