--- a/css/Main.css
+++ b/css/Main.css
@@ -12,6 +12,7 @@ html{
 body{
     font-size: 1.6rem;
     font-family: Arial, Helvetica, sans-serif;
+    zoom: 80%;
 }
 
 /* Estilos de la cabezera */
